# NotionRecurringTask

./: README.md  host.json  pyproject.toml  setup.cfg
Src/: main.py
Src/NotionRecurringTask/: RecurringTask.py  notion.py
Src/NotionRecurringTask/Notion/: TaskConfiguration.py  utils.py
