[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "NotionRecurringTask-KevinZhou"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
dependencies = [
    "requests >=2.6"   
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nightwish2016/NotionRecurringTask"
"Bug Tracker" = "https://github.com/nightwish2016/NotionRecurringTask/issues"