[metadata]
name = NotionRecurringTask-KevinZhou
version = 0.1.0
author = KevinZhou
author_email = kzhou2017@outlook.com
description = Create recurring task by Notion API
long_description = file: README.md   
long_description_content_type = text/markdown
url = https://github.com/nightwish2016/NotionRecurringTask
project_urls =
    Bug Tracker = https://github.com/nightwish2016/NotionRecurringTask/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = = Src   
include_package_data=True 
packages = find:
python_requires = >=3.6




[options.packages.find]
where = Src




